...
      final Map<String, dynamic> data = json.decode(response.body);
      if (data['nro_afiliado'] == 0) {
        return AuthInvalidCredentialsResponse.fromJson(response.statusCode, data);
      }
      return AuthSuccessResponse.fromJson(response.statusCode, data);
    } on SocketException catch (_) {
      return AuthGenericErrorResponse(statusCode: 0, errorMessage: 'Error en la conexión con el servidor');
    } on TimeoutException catch (_) {
      return AuthGenericErrorResponse(statusCode: 0, errorMessage: 'Error en la conexión con el servidor');
    } on FormatException catch (_) {
      return AuthGenericErrorResponse(
        statusCode: 500,
        errorMessage: 'Error del servidor, intente nuevamente más tarde',
...
      }

      if (response.statusCode == 400) {
        return RecuperarInvalidCredentialsResponse.fromJson(response.statusCode, data);
      }

      return RecuperarGenericErrorResponse(statusCode: 500, errorMessage: 'Error inesperado al recuperar contraseña');
    } on SocketException catch (_) {
      return RecuperarGenericErrorResponse(statusCode: 0, errorMessage: 'Error en la conexión con el servidor');
    } on TimeoutException catch (_) {
      return RecuperarGenericErrorResponse(statusCode: 0, errorMessage: 'Error en la conexión con el servidor');
    } on FormatException catch (_) {
      return RecuperarGenericErrorResponse(
...
